# hatch-cextensions

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
src/hatch_cextensions/: __about__.py  __init__.py  hooks.py  plugin.py
tests/: __init__.py  conftest.py  test_plugin.py  utils.py
tests/examples/00-HelloWorld/: pyproject.toml  test.py
tests/examples/01-HeyMan/: pyproject.toml  setup.py  test.py
